Alle views geupdate met een nieuw werkend design. Naamconventies geupdate naar een meer leesbaar/verstaanbaar type en bug fixes.

--- a/Views/AcademieJaar/Create.cshtml
+++ b/Views/AcademieJaar/Create.cshtml
@@ -1,13 +1,12 @@
-﻿@model HogeschoolPXL.Models.AcademieJaar
+﻿@model HogeschoolPXL.Models.Academiejaar
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
 }
 
-<h1>Create AcademieJaar</h1>
+<h1 class="titleView">Creëer Academiejaar</h1>
 
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -16,15 +15,16 @@
                 <input asp-for="Datum" class="form-control" />
                 <span asp-validation-for="Datum" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Academiejaar">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Creëer Academiejaar" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
