--- a/Views/Inschrijving/Create.cshtml
+++ b/Views/Inschrijving/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model HogeschoolPXL.Models.Inschrijving
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
 }
 
-<h1>Create Inschrijving</h1>
-<hr />
+<h1 class="titleView">Creëer Inschrijving</h1>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -16,22 +15,23 @@
                 <select asp-for="StudentId" class ="form-control" asp-items="ViewBag.StudentId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="VakLectorId" class="control-label">Vak</label>
+                <label asp-for="VakLectorId" class="control-label"></label>
                 <select asp-for="VakLectorId" class ="form-control" asp-items="ViewBag.VakLectorId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AcademieJaarId" class="control-label"></label>
-                <select asp-for="AcademieJaarId" class ="form-control" asp-items="ViewBag.AcademieJaarId"></select>
+                <label asp-for="AcademiejaarId" class="control-label"></label>
+                <select asp-for="AcademiejaarId" class ="form-control" asp-items="ViewBag.AcademiejaarId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Creëer Inschrijving" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
