--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = "Overview";
 }
 
-<h1>Overview</h1>
+<div class="d-flex justify-content-between mx-2 mb-3">
+    <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
+        <img src="~/img/arrow-left.svg" />
+        <span class="backButton">Home</span>
+    </a>
+    <h1>Inschrijvingen</h1>
+    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Inschrijving</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -19,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.VakLector.Vak)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AcademieJaar)
+                @Html.DisplayNameFor(model => model.Academiejaar)
             </th>
             <th></th>
         </tr>
@@ -35,12 +39,12 @@
                 @Html.DisplayFor(modelItem => item.VakLector.Vak.VakNaam)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.AcademieJaar.Datum)
+                @Html.DisplayFor(modelItem => item.Academiejaar.Datum)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.InschrijvingId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.InschrijvingId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.InschrijvingId">Delete</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.InschrijvingId">Edit</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.InschrijvingId">Details</a>
+                <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.InschrijvingId">Delete</a>
             </td>
         </tr>
 }
