--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HogeschoolPXL.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/img/pxl.png">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
             <div class="dropdown-content">
                 <a class="dropdown-item" asp-controller="Inschrijving" asp-action="Index">Inschrijving</a>
                 <hr class="dropdown-divider">
-                <a class="dropdown-item" asp-controller="AcademieJaar" asp-action="Index">AcademieJaar</a>
+                <a class="dropdown-item" asp-controller="Academiejaar" asp-action="Index">Academiejaar</a>
                 <a class="dropdown-item" asp-controller="Handboek" asp-action="Index">Handboek</a>
                 <a class="dropdown-item" asp-controller="Vak" asp-action="Index">Vak</a>
             </div>
