--- a/Views/VakLector/Details.cshtml
+++ b/Views/VakLector/Details.cshtml
@@ -4,27 +4,32 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details VakLector</h1>
-<hr />
+<h1 class="titleView">Details VakLector</h1>
 
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Lector)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lector.Gebruiker.Voornaam) 
-            @Html.DisplayFor(model => model.Lector.Gebruiker.Naam)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Vak)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vak.VakNaam)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.VakLectorId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="d-flex justify-content-center">
+    <div class="col-md-4">
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Lector)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Lector.Gebruiker.Voornaam) 
+                @Html.DisplayFor(model => model.Lector.Gebruiker.Naam)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Vak)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Vak.VakNaam)
+            </dd>
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="VakLector">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <a asp-action="Edit" asp-route-id="@Model?.VakLectorId" class="btn btn-outline-success btn-sm viewButton">Edit VakLector</a>
+            </div>
+        </dl>
+    </div>
 </div>
