--- a/Views/VakLector/Index.cshtml
+++ b/Views/VakLector/Index.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = "Overview";
 }
 
-<h1>Overview</h1>
+<div class="d-flex justify-content-between mx-2 mb-3">
+    <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
+        <img src="~/img/arrow-left.svg" />
+        <span class="backButton">Home</span>
+    </a>
+    <h1>VakLector</h1>
+    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer VakLector</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -32,9 +36,9 @@
                 @Html.DisplayFor(modelItem => item.Vak.VakNaam)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.VakLectorId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.VakLectorId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.VakLectorId">Delete</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.VakLectorId">Edit</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.VakLectorId">Details</a>
+                <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.VakLectorId">Delete</a>
             </td>
         </tr>
 }
