--- a/Views/AcademieJaar/Edit.cshtml
+++ b/Views/AcademieJaar/Edit.cshtml
@@ -1,31 +1,31 @@
-﻿@model HogeschoolPXL.Models.AcademieJaar
+﻿@model HogeschoolPXL.Models.Academiejaar
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit AcademieJaar</h1>
+<h1 class="titleView">Edit Academiejaar</h1>
 
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AcademieJaarId" />
+            <input type="hidden" asp-for="AcademiejaarId" />
             <div class="form-group">
                 <label asp-for="Datum" class="control-label"></label>
                 <input asp-for="Datum" class="form-control" />
                 <span asp-validation-for="Datum" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Update Academiejaar" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
