--- a/Views/AcademieJaar/Index.cshtml
+++ b/Views/AcademieJaar/Index.cshtml
@@ -1,14 +1,18 @@
-﻿@model IEnumerable<HogeschoolPXL.Models.AcademieJaar>
+﻿@model IEnumerable<HogeschoolPXL.Models.Academiejaar>
 
 @{
     ViewData["Title"] = "Overview";
 }
 
-<h1>Overview</h1>
+<div class="d-flex justify-content-between mx-2 mb-3">
+    <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
+        <img src="~/img/arrow-left.svg" />
+        <span class="backButton">Home</span>
+    </a>
+    <h1>Academiejaren</h1>
+    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Academiejaar</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -25,9 +29,9 @@
                 @Html.DisplayFor(modelItem => item.Datum)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.AcademieJaarId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AcademieJaarId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AcademieJaarId">Delete</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.AcademiejaarId">Edit</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.AcademiejaarId">Details</a>
+                <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.AcademiejaarId">Delete</a>
             </td>
         </tr>
 }
