--- a/Views/Gebruiker/Create.cshtml
+++ b/Views/Gebruiker/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model HogeschoolPXL.Models.Gebruiker
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
 }
 
-<h1>Create Gebruiker</h1>
-<hr />
+<h1 class="titleView">Creëer Gebruiker</h1>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -26,15 +25,15 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-outline-success btn-sm createButton" />
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Creëer Gebruiker" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
