--- a/Views/Gebruiker/Delete.cshtml
+++ b/Views/Gebruiker/Delete.cshtml
@@ -1,37 +1,40 @@
 ﻿@model HogeschoolPXL.Models.Gebruiker
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Verwijderen";
 }
 
-<h3>Are you sure you want to delete this?</h3>
-<hr />
+<h3 class="titleView">Deze gebruiker verwijderen?</h3>
 
-<div>
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Voornaam)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Voornaam)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Naam)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Naam)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="GebruikerId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="d-flex justify-content-center">
+    <div class="col-md-4">
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Voornaam)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Voornaam)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Naam)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Naam)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        </dl>
+        <form asp-action="Delete" class="form-group d-flex justify-content-between">
+            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
+                <img src="~/img/arrow-left.svg" />
+                <span class="backButton">Terug</span>
+            </a>
+            <input type="hidden" asp-for="GebruikerId" />
+            <input type="submit" value="Verwijder" class="btn btn-outline-danger btn-sm viewButton"/>
+        </form>
+    </div>
 </div>
