--- a/Views/Handboek/Delete.cshtml
+++ b/Views/Handboek/Delete.cshtml
@@ -1,43 +1,47 @@
 ﻿@model HogeschoolPXL.Models.Handboek
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Verwijderen";
 }
 
-<h3>Are you sure you want to delete this?</h3>
-<hr />
+<h3 class="titleView">Deze handboek verwijderen?</h3>
 
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Titel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Titel)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KostPrijs)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.KostPrijs)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UitgifteDatum)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UitgifteDatum)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Afbeelding)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Afbeelding)
-        </dd>
-    </dl>
+<div class="d-flex justify-content-center">
+    <div class="col-md-4">
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Titel)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Titel)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Kostprijs)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Kostprijs)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.UitgifteDatum)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.UitgifteDatum)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Afbeelding)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Afbeelding)
+            </dd>
+        </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="HandboekId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <form asp-action="Delete" class="form-group d-flex justify-content-between">
+            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
+                <img src="~/img/arrow-left.svg" />
+                <span class="backButton">Terug</span>
+            </a>
+            <input type="hidden" asp-for="HandboekId" />
+            <input type="submit" value="Verwijder" class="btn btn-outline-danger btn-sm viewButton" />
+        </form>
+    </div>
 </div>
