--- a/Views/Handboek/Edit.cshtml
+++ b/Views/Handboek/Edit.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Handboek</h1>
-<hr />
+<h1 class="titleView">Edit Handboek</h1>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -18,9 +17,9 @@
                 <span asp-validation-for="Titel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="KostPrijs" class="control-label"></label>
-                <input asp-for="KostPrijs" class="form-control" />
-                <span asp-validation-for="KostPrijs" class="text-danger"></span>
+                <label asp-for="Kostprijs" class="control-label"></label>
+                <input asp-for="Kostprijs" class="form-control" />
+                <span asp-validation-for="Kostprijs" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UitgifteDatum" class="control-label"></label>
@@ -32,17 +31,30 @@
                 <input asp-for="Afbeelding" class="form-control" />
                 <span asp-validation-for="Afbeelding" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Update Handboek" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    @* Overwrite Validation Script to insert comma instead of dot for decimal numbers *@
+    <script>
+        $.validator.methods.range = function (value, element, param) {
+            var globalizedValue = value.replace(",", ".");
+            return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+        }
+
+        $.validator.methods.number = function (value, element) {
+            return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+        }
+    </script>
 }
