--- a/Views/Handboek/Index.cshtml
+++ b/Views/Handboek/Index.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = "Overview";
 }
 
-<h1>Overview</h1>
+<div class="d-flex justify-content-between mx-2 mb-3">
+    <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
+        <img src="~/img/arrow-left.svg" />
+        <span class="backButton">Home</span>
+    </a>
+    <h1>Handboeken</h1>
+    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Handboek</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -16,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.Titel)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.KostPrijs)
+                @Html.DisplayNameFor(model => model.Kostprijs)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UitgifteDatum)
@@ -34,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Titel)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.KostPrijs)
+                @Html.DisplayFor(modelItem => item.Kostprijs)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UitgifteDatum)
@@ -43,9 +47,9 @@
                 @Html.DisplayFor(modelItem => item.Afbeelding)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.HandboekId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.HandboekId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.HandboekId">Delete</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Edit" asp-route-id="@item.HandboekId">Edit</a>
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Details" asp-route-id="@item.HandboekId">Details</a>
+                <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.HandboekId">Delete</a>
             </td>
         </tr>
 }
