--- a/Views/Lector/Edit.cshtml
+++ b/Views/Lector/Edit.cshtml
@@ -1,13 +1,12 @@
 ﻿@model HogeschoolPXL.Models.Lector
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Lector</h1>
+<h1 class="titleView">Edit Lector</h1>
 
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -17,15 +16,16 @@
                 <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
                 <span asp-validation-for="GebruikerId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Update Lector" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
