--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -1,28 +1,28 @@
 ﻿@model HogeschoolPXL.Models.Student
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
 }
 
-<h1>Create Student</h1>
+<h1 class="titleView">Creëer Student</h1>
 
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="GebruikerId" class="control-label"></label>
                 <select asp-for="GebruikerId" class ="form-control" asp-items="ViewBag.GebruikerId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Creëer Student" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
