--- a/Views/Student/Edit.cshtml
+++ b/Views/Student/Edit.cshtml
@@ -4,27 +4,28 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Student</h1>
+<h1 class="titleView">Edit Student</h1>
 
-<hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="StudentId" />
             <div class="form-group">
+                <label asp-for="GebruikerId" class="control-label"></label>
                 <select asp-for="GebruikerId" class="form-control" asp-items="ViewBag.GebruikerId"></select>
                 <span asp-validation-for="GebruikerId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Update Student" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
