--- a/Views/Vak/Create.cshtml
+++ b/Views/Vak/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model HogeschoolPXL.Models.Vak
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
 }
 
-<h1>Create Vak</h1>
-<hr />
+<h1 class="titleView">Creëer Vak</h1>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -17,23 +16,24 @@
                 <span asp-validation-for="VakNaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StudiePunten" class="control-label"></label>
-                <input asp-for="StudiePunten" class="form-control" />
-                <span asp-validation-for="StudiePunten" class="text-danger"></span>
+                <label asp-for="Studiepunten" class="control-label"></label>
+                <input asp-for="Studiepunten" class="form-control" />
+                <span asp-validation-for="Studiepunten" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="HandboekId" class="control-label"></label>
                 <select asp-for="HandboekId" class ="form-control" asp-items="ViewBag.HandboekId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Vak">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Creëer Vak" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
