--- a/Views/Vak/Edit.cshtml
+++ b/Views/Vak/Edit.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Vak</h1>
-<hr />
+<h1 class="titleView">Edit Vak</h1>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -18,24 +17,24 @@
                 <span asp-validation-for="VakNaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StudiePunten" class="control-label"></label>
-                <input asp-for="StudiePunten" class="form-control" />
-                <span asp-validation-for="StudiePunten" class="text-danger"></span>
+                <label asp-for="Studiepunten" class="control-label"></label>
+                <input asp-for="Studiepunten" class="form-control" />
+                <span asp-validation-for="Studiepunten" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="HandboekId" class="control-label"></label>
                 <select asp-for="HandboekId" class="form-control" asp-items="ViewBag.HandboekId"></select>
                 <span asp-validation-for="HandboekId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Update Vak" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
