--- a/Views/VakLector/Create.cshtml
+++ b/Views/VakLector/Create.cshtml
@@ -1,13 +1,12 @@
 ﻿@model HogeschoolPXL.Models.VakLector
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Creëer";
 }
 
-<h1>Create VakLector</h1>
-<hr />
+<h1 class="titleView">Creëer VakLector</h1>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -19,15 +18,16 @@
                 <label asp-for="VakId" class="control-label"></label>
                 <select asp-for="VakId" class ="form-control" asp-items="ViewBag.VakId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group d-flex justify-content-between">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="VakLector">
+                    <img src="~/img/arrow-left.svg" />
+                    <span class="backButton">Terug</span>
+                </a>
+                <input type="submit" value="Creëer VakLector" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
