--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,32 +29,67 @@ footer #footerText {
 /* Container */
 .container {
     margin: 25px auto;
+    max-width: 65rem;
 }
-.createButton {
+.viewButton {
     margin: 6px 0;
+    height: fit-content;
     border-radius: 50px;
     box-shadow: 0 0 8px lightgrey;
 }
-.createButtonParent {
-    text-align: center;
-    justify-content: center;
-    display: flex;
-}
-.createButtonParent a {
-    text-align: center;
-    border-radius: 50px;
-}
-.createButtonParent a {
-    height: 26px;
-}
-.arrow-left {
-    display: flex;
-    width: fit-content;
-    margin: 6px 6px;
-    padding: 4px;
+.backArrow /* Arrow */{
+    height: fit-content;
+    margin: 6px 0;
 
     border-radius: 50px;
     box-shadow: 0 0 8px lightgrey;
+}
+.backButton {
+    padding: 0 3px;
+}
+.backArrow img {
+    vertical-align: sub;
+}
+
+/* View Pages Title */
+.titleView {
+    margin: auto;
+    width: 40%;
+    text-align: center;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+
+    border-bottom: 1px solid lightgrey;
+}
+
+/* Table */
+table {
+    padding: 2px 10px;
+    border-collapse: separate;
+    border-radius: 8px;
+
+    background-color: #fafafa;
+    box-shadow: 0 0 20px lightgrey;
+}
+tr {
+    margin-bottom: 5px;
+}
+tr td:last-child {
+    text-align: end;
+}
+tr:last-child {
+    border-bottom: #fafafa;
+}
+.form-group {
+    margin-bottom: 5px;
+}
+.form-group label {
+    margin-left: 5px;
+    margin-bottom: 2px;
+}
+
+.row dd {
+    text-align: right;
 }
 
 /* Logo */
